# etl-debugger

./: .gitignore  README.md  pyproject.toml
eval/: runner.py  scorer.py
golden_set/: manifest.yaml
golden_set/case_01_schema_mismatch/: dest_schema.sql  expected_fix.yaml  pipeline.yaml  source_data.csv
golden_set/case_02_missing_column/: dest_schema.sql  expected_fix.yaml  pipeline.yaml  source_data.csv
golden_set/case_03_type_cast_error/: dest_schema.sql  expected_fix.yaml  pipeline.yaml  source_data.csv
golden_set/case_04_join_key_mismatch/: customers.csv  dest_schema.sql  expected_fix.yaml  orders.csv  pipeline.yaml
src/: agent.py  cli.py  llm.py  models.py  pipeline.py
src/tools/: __init__.py  file_reader.py  log_parser.py  schema_inspector.py  sql_executor.py
tests/: test_agent.py  test_pipeline.py  test_tools.py
