[project]
name = "etl-debugger"
version = "0.1.0"
description = "Agentic AI system that autonomously diagnoses and fixes broken SQL/ETL pipelines using local LLMs"
requires-python = ">=3.11"
dependencies = [
    "ollama>=0.4.0",
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "duckdb>=0.9.0",
    "pydantic>=2.0",
]

[project.scripts]
etl-debug = "src.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*", "eval*"]
